[gd_scene load_steps=15 format=2]

[ext_resource path="res://Graphics/Enemies/Enemy_Forest_004_Torso.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Enemies/Enemy_Forest_004_Head.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Enemies/Enemy_Forest_004_Limbs.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/HitBox.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Enemies/PuppetGolem.gd" type="Script" id=5]
[ext_resource path="res://Shaders/FlashShader.tres" type="Material" id=6]
[ext_resource path="res://Scenes/Enemies/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/ParticleFX/DeathParticle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Projectiles/GreenFire.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Limbs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "move"
}, {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "move"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 26 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 27 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 10 )

[node name="PuppetGolem" type="KinematicBody2D"]
position = Vector2( 0, -6 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )
DeathParticle = ExtResource( 8 )
Projectile = ExtResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
maxHP = 200

[node name="Limbs" type="Sprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 0, 13 )
texture = ExtResource( 3 )
hframes = 5
frame = 3

[node name="Torso" type="Sprite" parent="."]
material = ExtResource( 6 )
texture = ExtResource( 1 )
hframes = 4

[node name="Head" type="Sprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 1, -19 )
texture = ExtResource( 2 )
hframes = 4

[node name="AnimationPlayerLimbs" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 1 )

[node name="AnimationPlayerHeadTorso" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 1, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 17 )
shape = SubResource( 5 )

[node name="ProjectileSpawn" type="Position2D" parent="."]
position = Vector2( 0, 3 )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.075

[node name="ProjectileTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
autostart = true

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_ProjectileTimer_timeout"]
